Fixed header alignment issue.

--- a/.metalsmith/sass/main.scss
+++ b/.metalsmith/sass/main.scss
@@ -324,6 +324,9 @@ footer.main-footer {
 		display: block;
 	}
 }
+h1#logo {
+  margin: 10px 0;
+}
 #logo {
   span.img {
     display: inline-block;
